# cabal-issue-1896

./: .gitignore  README.md
bar/: bar.cabal  test.sh
foo/: LICENSE  foo.cabal
