name: foo
version: 0.0.0.1
cabal-version: >=1.7.1
build-type: Simple
license: MIT
synopsis: Has both libarary and executable stanzas both of which have dependencies.

library
    build-depends:
        base >=4.4 && <5
    hs-source-dirs: src

executable foo
    build-depends:
        base >=4 && <5,
        old-time >=1.0 && <1.2
    main-is: Main.hs

